fixed the spacing class padding

--- a/src/styles/5- pages/_home-page.scss
+++ b/src/styles/5- pages/_home-page.scss
@@ -127,7 +127,7 @@
 }
 
 .spacing {
-    padding: 37px 0;
+    padding: 46px 0;
 }
 
 .container-card-ad {
@@ -226,6 +226,7 @@
 
 .title--center {
     text-align: center;
+    margin-bottom: 75px;
 }
 
 .services-grid-container {
@@ -234,9 +235,7 @@
     grid-template-areas: "col col col col";
     justify-content: center;
     align-content: center;
-    grid-gap: .8em;
-    margin-top: 90px;
-    
+    grid-gap: .8em;    
 
     @media only screen and (max-width: 768px) {
         grid-template-columns: repeat(2, 50%);
